--- a/public/css/app.css
+++ b/public/css/app.css
@@ -629,6 +629,12 @@ video {
 .h-20 {
   height: 5rem;
 }
+.h-48 {
+  height: 12rem;
+}
+.h-full {
+  height: 100%;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -664,6 +670,9 @@ video {
 }
 .max-w-6xl {
   max-width: 72rem;
+}
+.max-w-xl {
+  max-width: 36rem;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -747,6 +756,9 @@ video {
 .border {
   border-width: 1px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-b-3 {
   border-bottom-width: 3px;
 }
@@ -761,6 +773,15 @@ video {
 }
 .border-l-3 {
   border-left-width: 3px;
+}
+.border-r {
+  border-right-width: 1px;
+}
+.border-dashed {
+  border-style: dashed;
+}
+.border-dotted {
+  border-style: dotted;
 }
 .border-red-600 {
   --tw-border-opacity: 1;
@@ -780,6 +801,10 @@ video {
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -915,6 +940,9 @@ video {
 .font-semibold {
   font-weight: 600;
 }
+.font-normal {
+  font-weight: 400;
+}
 .uppercase {
   text-transform: uppercase;
 }
@@ -929,6 +957,9 @@ video {
 }
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 .text-gray-300 {
   --tw-text-opacity: 1;
